set(CMAKE_CXX_FLAGS "${BRAHMS_HOST_DEFINITION} -fPIC -Werror -pthread -O3")
set(CMAKE_C_FLAGS "${BRAHMS_HOST_DEFINITION} -fPIC -Werror -pthread -O3")
message(STATUS "Flags for components: " ${CMAKE_CXX_FLAGS})
add_subdirectory(std)
add_subdirectory(sets)
add_subdirectory(bench)
add_subdirectory(dev)
add_subdirectory(language)
add_subdirectory(gui)
add_subdirectory(test)
add_subdirectory(example)
