if(APPLE)
  # Set any Necessary Apple compiler flags for components here.
else()
  # Not sure these flags are strictly necessary. -fPIC may be most important.
  set(CMAKE_CXX_FLAGS "${BRAHMS_HOST_DEFINITION} -fPIC -Werror -pthread -O3")
  set(CMAKE_C_FLAGS "${BRAHMS_HOST_DEFINITION} -fPIC -Werror -pthread -O3")
endif(APPLE)
message(STATUS "Flags for components: " ${CMAKE_CXX_FLAGS})
add_subdirectory(std)
add_subdirectory(sets)
add_subdirectory(bench)
add_subdirectory(dev)
add_subdirectory(language)
if(COMPILE_WX_COMPONENT)
  message(STATUS "Compiling WX-dependent component dev/std/image/numeric")
  add_subdirectory(gui)
else()
  message(STATUS "Omitting WX-dependent component dev/std/image/numeric")
  message(STATUS "  (Include dev/std/image/numeric with `cmake -DCOMPILE_WX_COMPONENT=ON`)")
endif(COMPILE_WX_COMPONENT)
add_subdirectory(test)
add_subdirectory(example)
